RESOLVED FIXED110593
Web Inspector: InspectorPageAgent::disable() should not update view metrics regardless of the override state
https://bugs.webkit.org/show_bug.cgi?id=110593
Summary Web Inspector: InspectorPageAgent::disable() should not update view metrics r...
Alexander Pavlov (apavlov)
Reported 2013-02-22 05:18:31 PST
Patch to follow.
Attachments
Patch (5.18 KB, patch)
2013-02-22 05:21 PST, Alexander Pavlov (apavlov)
vsevik: review+
Alexander Pavlov (apavlov)
Comment 1 2013-02-22 05:21:59 PST
Alexander Pavlov (apavlov)
Comment 2 2013-02-22 05:43:18 PST
Note You need to log in before you can comment on or make changes to this bug.