Web Inspector: InspectorPageAgent::disable() should not update view metrics regardless of the override state https://bugs.webkit.org/show_bug.cgi?id=110593

Reviewed by Vsevolod Vlasov.

InspectorPageAgent::disable() now checks if the device metrics are overridden before
telling the client to disable the override.

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::disable):
(WebCore::InspectorPageAgent::setDeviceMetricsOverride):
(WebCore::InspectorPageAgent::deviceMetricsChanged):
* inspector/InspectorPageAgent.h:
(InspectorPageAgent):

Canonical link: https://commits.webkit.org/128860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143721 268f45cc-cd09-0410-ab3c-d52691b4dbfc